--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -37,6 +37,9 @@
                             <div class="dropdown-menu dropdown-primary" aria-labelledby="bibliographicplan">
                                 <a href="{% url 'lending:bibliographic-list' %}" class="dropdown-item">Listado de
                                     planes</a>
+                                <a href="{% url 'lending:study-topic-list' %}" class="nav-link">Listado de
+                                    asignaturas</a>
+                                <div class="dropdown-divider"></div>
                                 <a href="{% url 'lending:bibliographic-create' %}" class="dropdown-item">A&ntilde;adir
                                     un plan</a>
                                 <a href="{% url 'lending:study-topic-create' %}" class="dropdown-item">A&ntilde;adir
