cambiando el color de los header a los del manual de indentidad de la UHo

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
 
         <div class="card">
             <!-- Material form login -->
-            <h5 class="card-header info-color white-text text-center py-4">
+            <h5 class="card-header blue-bg-uho white-text text-center py-4">
                 <strong>Entrar</strong>
             </h5>
 
