--- a/accounts/templates/navbar.html
+++ b/accounts/templates/navbar.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+        <nav class="navbar navbar-expand-lg navbar-dark blue-bg-uho">
             <div class="container-fluid">
                 <a href="{% url 'dashboard' %}" class="navbar-brand">
                     <strong>AlmacénDeLibros</strong>
@@ -84,7 +84,7 @@
         {% endblock %}
     </main>
 
-    <footer class="page-footer font-small blue pt-4">
+    <footer class="page-footer font-small blue-bg-uho pt-4">
         <div class="container-fluid text-center text-md-left">
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3">
