--- a/lending/templates/lending/book_detail.html
+++ b/lending/templates/lending/book_detail.html
@@ -25,14 +25,17 @@
             Editorial: {{ book.editorial }}
         </div>
         <div class="col-12 col-md-6">
+            Localidad: {{ book.location }}
+        </div>
+        <div class="col-12 col-md-6">
             Asignatura: {{ book.study_topic }}
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-1">
             <a href="{% url 'lending:book-update' book.pk %}" class="btn btn-default">Editar</a>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-1">
             <a href="{% url 'lending:book-delete' book.pk %}" class="btn btn-danger">Eliminar</a>
         </div>
     </div>
